--- a/scenes/login.fxml
+++ b/scenes/login.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane fx:id="anchorLogin" stylesheets="@styles/style_default.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.LoginController">
+<AnchorPane fx:id="anchorLogin" prefHeight="230.0" prefWidth="411.0" stylesheets="@styles/style_default.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.LoginController">
    <children>
       <VBox layoutX="4.0" prefHeight="400.0" prefWidth="640.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <children>
@@ -21,31 +21,31 @@
             <menus>
               <Menu mnemonicParsing="false" text="Mon compte">
                 <items>
-                        <MenuItem fx:id="quit" mnemonicParsing="false" onAction="#actionQuit" text="Quit" />
+                        <MenuItem fx:id="quit" mnemonicParsing="false" onAction="#actionQuit" text="Quitter" />
                 </items>
               </Menu>
             </menus>
           </MenuBar>
           <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
             <children>
-                  <GridPane layoutX="-4.0" prefHeight="371.0" prefWidth="640.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-4.0" AnchorPane.rightAnchor="4.0" AnchorPane.topAnchor="0.0">
+                  <GridPane layoutX="-4.0" prefHeight="350.0" prefWidth="640.0" AnchorPane.bottomAnchor="-4.0" AnchorPane.leftAnchor="-4.0" AnchorPane.rightAnchor="4.0" AnchorPane.topAnchor="0.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="1.0" prefWidth="1.0" />
                     </columnConstraints>
                     <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="37.19997787475586" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="84.0" minHeight="10.0" prefHeight="54.79998016357422" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="67.20001983642578" minHeight="10.0" prefHeight="49.200006103515605" valignment="CENTER" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="54.399993896484375" minHeight="10.0" prefHeight="54.399993896484375" valignment="CENTER" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
                         <PasswordField fx:id="passwordtextField" prefHeight="26.0" prefWidth="398.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
                         <Label text="Password" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-                        <Label layoutX="99.0" layoutY="188.0" text="login" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                        <Label layoutX="99.0" layoutY="188.0" text="Login" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
                         <TextField fx:id="loginField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <Button fx:id="connexion" mnemonicParsing="false" onAction="#loginProgram" text="connexion" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
+                        <Button fx:id="connexion" mnemonicParsing="false" onAction="#loginProgram" text="Connexion" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
                      </children>
                   </GridPane>
             </children>
