--- a/scenes/vue_absences_administration.fxml
+++ b/scenes/vue_absences_administration.fxml
@@ -23,7 +23,7 @@
               <Menu mnemonicParsing="false" text="Mon compte">
                 <items>
                   <MenuItem fx:id="retourMenu" mnemonicParsing="false" onAction="#fonctionRetour" text="retour au menu" />
-                  <MenuItem fx:id="quitMenu" mnemonicParsing="false" onAction="#fonctionQuit" text="Quit" />
+                  <MenuItem fx:id="quitMenu" mnemonicParsing="false" onAction="#fonctionQuit" text="Quitter" />
                 </items>
               </Menu>
             </menus>
@@ -43,9 +43,9 @@
                           <columns>
                             <TableColumn prefWidth="126.0" text="Nom" />
                             <TableColumn prefWidth="86.0" text="Prenom" />
-                              <TableColumn prefWidth="100.0" text="identifiant" />
-                              <TableColumn prefWidth="102.0" text="module" />
-                              <TableColumn prefWidth="109.0" text="date" />
+                              <TableColumn prefWidth="100.0" text="Identifiant" />
+                              <TableColumn prefWidth="102.0" text="Module" />
+                              <TableColumn prefWidth="109.0" text="Date" />
                               <TableColumn prefWidth="123.0" text="Justification" />
                           </columns>
                            <columnResizePolicy>
