--- a/scenes/vue_admin_modules.fxml
+++ b/scenes/vue_admin_modules.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
@@ -20,13 +19,12 @@
    <children>
       <VBox prefHeight="400.0" prefWidth="640.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label text="cours :" />
             <MenuBar VBox.vgrow="NEVER">
                <menus>
                   <Menu mnemonicParsing="false" text="Mon compte">
                      <items>
                         <MenuItem fx:id="retourMenu" mnemonicParsing="false" onAction="#fonctionRetour" text="Retour au menu" />
-                        <MenuItem fx:id="quitMenu" mnemonicParsing="false" onAction="#fonctionQuit" text="Quit" />
+                        <MenuItem fx:id="quitMenu" mnemonicParsing="false" onAction="#fonctionQuit" text="Quitter" />
                      </items>
                   </Menu>
                </menus>
@@ -41,17 +39,17 @@
                                  <content>
                                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="288.0" prefWidth="225.0">
                                        <children>
-                                          <GridPane prefHeight="366.0" prefWidth="272.0" AnchorPane.bottomAnchor="-50.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                          <GridPane layoutY="-1.0" prefHeight="341.0" prefWidth="272.0" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="-1.0">
                                              <columnConstraints>
                                                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                              </columnConstraints>
                                              <rowConstraints>
-                                                <RowConstraints maxHeight="172.0" minHeight="10.0" prefHeight="53.0" vgrow="SOMETIMES" />
-                                                <RowConstraints maxHeight="313.0" minHeight="10.0" prefHeight="313.0" vgrow="SOMETIMES" />
+                                                <RowConstraints maxHeight="172.0" minHeight="10.0" prefHeight="40.40001220703125" vgrow="SOMETIMES" />
+                                                <RowConstraints maxHeight="313.0" minHeight="10.0" prefHeight="277.9999877929688" vgrow="SOMETIMES" />
                                              </rowConstraints>
                                              <children>
                                                 <ComboBox fx:id="comboEleveNotes" onAction="#selectionEleveNotes" prefHeight="34.0" prefWidth="280.0" promptText="Élève" />
-                                                <TableView fx:id="tableNotesEleve" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+                                                <TableView fx:id="tableNotesEleve" prefHeight="277.0" prefWidth="260.0" GridPane.rowIndex="1">
                                                    <columns>
                                                       <TableColumn prefWidth="135.0" text="Nom note" />
                                                       <TableColumn prefWidth="136.0" text="note" />
@@ -131,7 +129,7 @@
                      <children>
                         <Pane prefHeight="400.0" prefWidth="392.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <children>
-                              <GridPane prefHeight="400.0" prefWidth="371.0">
+                              <GridPane prefHeight="370.0" prefWidth="370.0">
                                  <columnConstraints>
                                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                  </columnConstraints>
@@ -140,12 +138,12 @@
                                     <RowConstraints maxHeight="226.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
                                  </rowConstraints>
                                  <children>
-                                    <TableView fx:id="tableNotesElevesCour" prefHeight="353.0" prefWidth="371.0">
+                                    <TableView fx:id="tableNotesElevesCour" prefHeight="345.0" prefWidth="358.0">
                                        <columns>
                                           <TableColumn prefWidth="83.0" text="Nom" />
-                                          <TableColumn prefWidth="95.0" text="Prenom" />
-                                          <TableColumn prefWidth="81.0" text="note" />
-                                          <TableColumn prefWidth="108.0" text="identifiant" />
+                                          <TableColumn prefWidth="95.0" text="Prénom" />
+                                          <TableColumn prefWidth="81.0" text="Note" />
+                                          <TableColumn prefWidth="108.0" text="Identifiant" />
                                        </columns>
                                        <columnResizePolicy>
                                           <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
