--- a/scenes/vue_adminstration_bulletin.fxml
+++ b/scenes/vue_adminstration_bulletin.fxml
@@ -21,12 +21,12 @@
    <children>
       <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <children>
-          <MenuBar prefHeight="41.0" prefWidth="651.0" VBox.vgrow="NEVER">
+          <MenuBar prefHeight="29.0" prefWidth="666.0" VBox.vgrow="NEVER">
             <menus>
               <Menu mnemonicParsing="false" text="Mon compte">
                 <items>
                   <MenuItem fx:id="retourMenu" mnemonicParsing="false" onAction="#fonctionRetour" text="retour au menu" />
-                  <MenuItem fx:id="quitMenu" mnemonicParsing="false" onAction="#fonctionQuit" text="Quit" />
+                  <MenuItem fx:id="quitMenu" mnemonicParsing="false" onAction="#fonctionQuit" text="Quitter" />
                 </items>
               </Menu>
             </menus>
@@ -43,12 +43,12 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <ComboBox fx:id="comboPromotion" onAction="#selectionPromotion" prefHeight="30.0" prefWidth="233.0" promptText="promotion">
+                        <ComboBox fx:id="comboPromotion" onAction="#selectionPromotion" prefHeight="30.0" prefWidth="233.0" promptText="Promotion">
                            <GridPane.margin>
                               <Insets left="10.0" right="10.0" />
                            </GridPane.margin>
                         </ComboBox>
-                        <ComboBox fx:id="comboFiliere" layoutX="10.0" layoutY="38.0" onAction="#selectionFiliere" prefHeight="30.0" prefWidth="233.0" promptText="filière" GridPane.columnIndex="1">
+                        <ComboBox fx:id="comboFiliere" layoutX="10.0" layoutY="38.0" onAction="#selectionFiliere" prefHeight="30.0" prefWidth="233.0" promptText="Filière" GridPane.columnIndex="1">
                            <GridPane.margin>
                               <Insets left="10.0" right="10.0" />
                            </GridPane.margin>
@@ -73,9 +73,9 @@
                      <children>
                         <TableView fx:id="tableMoyennesEleve" prefHeight="200.0" prefWidth="200.0">
                           <columns>
-                            <TableColumn prefWidth="129.0" text="module" />
-                            <TableColumn minWidth="0.0" prefWidth="96.0" text="moyenne" />
-                              <TableColumn minWidth="0.0" prefWidth="89.0" text="rattrapage" />
+                            <TableColumn prefWidth="129.0" text="Module" />
+                            <TableColumn minWidth="0.0" prefWidth="96.0" text="Moyenne" />
+                              <TableColumn minWidth="0.0" prefWidth="89.0" text="Rattrapage" />
                           </columns>
                            <GridPane.margin>
                               <Insets right="5.0" />
@@ -83,8 +83,8 @@
                         </TableView>
                         <TableView fx:id="tableAbsencesEleve" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
                           <columns>
-                            <TableColumn prefWidth="165.0" text="date absence" />
-                            <TableColumn prefWidth="181.0" text="justification" />
+                            <TableColumn prefWidth="165.0" text="Date de l'absence" />
+                            <TableColumn prefWidth="149.20001220703125" text="Justification" />
                           </columns>
                            <GridPane.margin>
                               <Insets left="5.0" />
@@ -104,9 +104,9 @@
                       <RowConstraints maxHeight="53.0" minHeight="10.0" prefHeight="41.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Button fx:id="genererBulletinButton" mnemonicParsing="false" onAction="#genererBulletinBouton" prefHeight="50.0" prefWidth="132.0" text="Génerer bulletin" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-                        <Button fx:id="detailButton" mnemonicParsing="false" onAction="#selectionnerDetailButton" prefHeight="50.0" prefWidth="132.0" text="détail notes" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-                        <Label text="aide au jury:" GridPane.halignment="RIGHT" GridPane.valignment="CENTER">
+                        <Button fx:id="genererBulletinButton" mnemonicParsing="false" onAction="#genererBulletinBouton" prefHeight="50.0" prefWidth="132.0" text="Bulletin résumé" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                        <Button fx:id="detailButton" mnemonicParsing="false" onAction="#selectionnerDetailButton" prefHeight="50.0" prefWidth="132.0" text="Bulletin détaillé" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                        <Label text="Aide au jury:" GridPane.halignment="RIGHT" GridPane.valignment="CENTER">
                            <GridPane.margin>
                               <Insets right="15.0" />
                            </GridPane.margin>
