--- a/scenes/vue_etudiant_selection_note.fxml
+++ b/scenes/vue_etudiant_selection_note.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
@@ -22,13 +21,12 @@
    <children>
       <VBox fx:id="vbox_etudiant" prefHeight="400.0" prefWidth="640.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label text="Module:" />
             <MenuBar VBox.vgrow="NEVER">
                <menus>
                   <Menu mnemonicParsing="false" text="Mon compte">
                      <items>
                         <MenuItem fx:id="retourMenu" mnemonicParsing="false" onAction="#fonctionRetour" text="Retour au menu" />
-                        <MenuItem fx:id="quitMenu" mnemonicParsing="false" onAction="#fonctionQuit" text="Quit" />
+                        <MenuItem fx:id="quitMenu" mnemonicParsing="false" onAction="#fonctionQuit" text="Quitter" />
                      </items>
                   </Menu>
                </menus>
@@ -74,8 +72,8 @@
                                           </ComboBox>
                                           <TableView fx:id="tableNotesModule" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                                              <columns>
-                                                <TableColumn fx:id="nomNoteColumn" prefWidth="135.0" text="Nom note" />
-                                                <TableColumn fx:id="noteColumn" prefWidth="136.0" text="note" />
+                                                <TableColumn fx:id="nomNoteColumn" prefWidth="135.0" text="Evaluation" />
+                                                <TableColumn fx:id="noteColumn" prefWidth="136.0" text="Note" />
                                              </columns>
                                              <columnResizePolicy>
                                                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
