--- a/scenes/vue_liste_modules.fxml
+++ b/scenes/vue_liste_modules.fxml
@@ -21,7 +21,7 @@
               <Menu mnemonicParsing="false" text="Mon compte">
                 <items>
                   <MenuItem fx:id="retourMenu" mnemonicParsing="false" onAction="#fonctionRetour" text="retour au menu" />
-                  <MenuItem fx:id="quitterMenu" mnemonicParsing="false" onAction="#fonctionQuit" text="Quit" />
+                  <MenuItem fx:id="quitterMenu" mnemonicParsing="false" onAction="#fonctionQuit" text="Quitter" />
                 </items>
               </Menu>
             </menus>
@@ -39,13 +39,13 @@
                      <children>
                         <TableView fx:id="tableModulesProf" prefHeight="247.0" prefWidth="640.0">
                            <columns>
-                              <TableColumn fx:id="coursColumn" prefWidth="639.0" text="liste cours" />
+                              <TableColumn fx:id="coursColumn" prefWidth="639.0" text="Liste des cours" />
                            </columns>
                            <columnResizePolicy>
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                            </columnResizePolicy>
                         </TableView>
-                        <ComboBox fx:id="selectionModuleCombo" onAction="#SelectionModule" prefHeight="46.0" prefWidth="299.0" promptText="selection module" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                        <ComboBox fx:id="selectionModuleCombo" onAction="#SelectionModule" prefHeight="46.0" prefWidth="299.0" promptText="Sélection du module" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
                      </children>
                   </GridPane>
             </children>
