--- a/scenes/vue_prof_selection_note.fxml
+++ b/scenes/vue_prof_selection_note.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
@@ -18,22 +17,21 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane fx:id="anchorProfNotes" prefHeight="444.0" prefWidth="629.0" stylesheets="@styles/style_admin_modules_sel_notes_prof_sel_notes.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.SelectionNoteProfController">
+<AnchorPane fx:id="anchorProfNotes" prefHeight="425.0" prefWidth="629.0" stylesheets="@styles/style_admin_modules_sel_notes_prof_sel_notes.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.SelectionNoteProfController">
    <children>
       <VBox prefHeight="400.0" prefWidth="640.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <children>
-            <Label text="cours :" />
           <MenuBar VBox.vgrow="NEVER">
             <menus>
               <Menu mnemonicParsing="false" text="Mon compte">
                 <items>
                   <MenuItem fx:id="retourMenu" mnemonicParsing="false" onAction="#fonctionRetour" text="Retour au menu" />
-                  <MenuItem fx:id="quitMenu" mnemonicParsing="false" onAction="#fonctionQuit" text="Quit" />
+                  <MenuItem fx:id="quitMenu" mnemonicParsing="false" onAction="#fonctionQuit" text="Quitter" />
                 </items>
               </Menu>
             </menus>
           </MenuBar>
-          <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="378.0" prefWidth="624.0" VBox.vgrow="ALWAYS">
+          <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="396.0" prefWidth="629.0" VBox.vgrow="ALWAYS">
                <children>
                   <AnchorPane layoutX="368.0" prefHeight="370.0" prefWidth="272.0" AnchorPane.bottomAnchor="29.0" AnchorPane.leftAnchor="368.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
@@ -43,7 +41,7 @@
                               <content>
                                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="288.0" prefWidth="225.0">
                                        <children>
-                                          <GridPane prefHeight="366.0" prefWidth="272.0" AnchorPane.bottomAnchor="-29.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                          <GridPane prefHeight="347.0" prefWidth="262.0" AnchorPane.bottomAnchor="-5.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                             <columnConstraints>
                                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                             </columnConstraints>
@@ -53,10 +51,10 @@
                                             </rowConstraints>
                                              <children>
                                                 <ComboBox fx:id="comboEleveNote" onAction="#selectionEleveNote" prefHeight="34.0" prefWidth="280.0" promptText="Élève" />
-                                                <TableView fx:id="tableNotesEleve" prefHeight="66.0" prefWidth="251.0" GridPane.rowIndex="1">
+                                                <TableView fx:id="tableNotesEleve" prefHeight="274.0" prefWidth="251.0" GridPane.rowIndex="1">
                                                    <columns>
-                                                      <TableColumn prefWidth="135.0" text="Nom note" />
-                                                      <TableColumn prefWidth="136.0" text="note" />
+                                                      <TableColumn prefWidth="135.0" text="Evaluation" />
+                                                      <TableColumn prefWidth="136.0" text="Note" />
                                                    </columns>
                                                    <columnResizePolicy>
                                                       <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -141,20 +139,20 @@
                                     <TableView fx:id="tableNotesElevesCour" prefHeight="353.0" prefWidth="371.0">
                                        <columns>
                                           <TableColumn prefWidth="83.0" text="Nom" />
-                                          <TableColumn prefWidth="95.0" text="Prenom" />
-                                          <TableColumn prefWidth="81.0" text="note" />
-                                          <TableColumn prefWidth="108.0" text="identifiant" />
+                                          <TableColumn prefWidth="95.0" text="Prénom" />
+                                          <TableColumn prefWidth="81.0" text="Note" />
+                                          <TableColumn prefWidth="108.0" text="Identifiant" />
                                        </columns>
                                        <columnResizePolicy>
                                           <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                                        </columnResizePolicy>
                                     </TableView>
-                                    <Button fx:id="nouvelleNoteButton" mnemonicParsing="false" onAction="#nouvelleNote" prefHeight="38.0" prefWidth="132.0" text="nouvelle note" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                                    <Button fx:id="nouvelleNoteButton" mnemonicParsing="false" onAction="#nouvelleNote" prefHeight="38.0" prefWidth="132.0" text="Nouvelle note" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                                        <GridPane.margin>
                                           <Insets left="25.0" />
                                        </GridPane.margin>
                                     </Button>
-                                    <Button fx:id="nouvelleNoteButton" layoutX="25.0" layoutY="364.0" mnemonicParsing="false" onAction="#nouvelleAbsence" prefHeight="38.0" prefWidth="132.0" text="nouvelle absence" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                                    <Button fx:id="nouvelleNoteButton" layoutX="25.0" layoutY="364.0" mnemonicParsing="false" onAction="#nouvelleAbsence" prefHeight="38.0" prefWidth="132.0" text="Nouvelle absence" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                                        <GridPane.margin>
                                           <Insets right="25.0" />
                                        </GridPane.margin>
