--- a/scenes/vue_prof_selection_note.fxml
+++ b/scenes/vue_prof_selection_note.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane fx:id="anchorProfNotes" prefHeight="425.0" prefWidth="629.0" stylesheets="@styles/style_admin_modules_sel_notes_prof_sel_notes.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.SelectionNoteProfController">
+<AnchorPane fx:id="anchorProfNotes" stylesheets="@styles/style_admin_modules_sel_notes_prof_sel_notes.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.SelectionNoteProfController">
    <children>
       <VBox prefHeight="400.0" prefWidth="640.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <children>
@@ -127,16 +127,16 @@
                      <children>
                         <Pane prefHeight="400.0" prefWidth="392.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <children>
-                              <GridPane prefHeight="400.0" prefWidth="371.0">
+                              <GridPane prefHeight="376.0" prefWidth="368.0">
                                 <columnConstraints>
                                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                 </columnConstraints>
                                 <rowConstraints>
-                                  <RowConstraints maxHeight="363.0" minHeight="10.0" prefHeight="345.0" vgrow="SOMETIMES" />
-                                  <RowConstraints maxHeight="226.0" minHeight="10.0" prefHeight="55.0" vgrow="SOMETIMES" />
+                                  <RowConstraints maxHeight="363.0" minHeight="10.0" prefHeight="319.7999755859375" vgrow="SOMETIMES" />
+                                  <RowConstraints maxHeight="226.0" minHeight="10.0" prefHeight="46.60002441406249" vgrow="SOMETIMES" />
                                 </rowConstraints>
                                  <children>
-                                    <TableView fx:id="tableNotesElevesCour" prefHeight="353.0" prefWidth="371.0">
+                                    <TableView fx:id="tableNotesElevesCour" prefHeight="301.0" prefWidth="357.0">
                                        <columns>
                                           <TableColumn prefWidth="83.0" text="Nom" />
                                           <TableColumn prefWidth="95.0" text="Prénom" />
