--- a/scenes/styles/style_admin_modules_sel_notes_prof_sel_notes.css
+++ b/scenes/styles/style_admin_modules_sel_notes_prof_sel_notes.css
@@ -9,9 +9,14 @@
     -fx-background-color: rgb(43, 42, 105);
 }
 
+.menu-item
+{
+    -fx-background-color: rgb(43, 42, 105);
+}
+
 .menu:showing
 {
-    -fx-background-color: rgb(48, 47, 110);
+    -fx-background-color: rgb(43, 42, 105);
 }
 
 .menu:showing .label
