refactored french from bulletin controller/view

--- a/scenes/vue_adminstration_bulletin.fxml
+++ b/scenes/vue_adminstration_bulletin.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane fx:id="anchorBulletin" stylesheets="@styles/style_add_note.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AdministrationBulletinController">
+<AnchorPane fx:id="anchorReport" stylesheets="@styles/style_add_note.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AdministrationBulletinController">
    <children>
       <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <children>
@@ -25,8 +25,8 @@
             <menus>
               <Menu mnemonicParsing="false" text="Mon compte">
                 <items>
-                  <MenuItem fx:id="retourMenu" mnemonicParsing="false" onAction="#fonctionRetour" text="retour au menu" />
-                  <MenuItem fx:id="quitMenu" mnemonicParsing="false" onAction="#fonctionQuit" text="Quitter" />
+                  <MenuItem fx:id="backMenu" mnemonicParsing="false" onAction="#backFunction" text="retour au menu" />
+                  <MenuItem fx:id="quitMenu" mnemonicParsing="false" onAction="#quitFunction" text="Quitter" />
                 </items>
               </Menu>
             </menus>
@@ -43,17 +43,17 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <ComboBox fx:id="comboPromotion" onAction="#selectionPromotion" prefHeight="30.0" prefWidth="233.0" promptText="Promotion">
+                        <ComboBox fx:id="yearGroupCombo" onAction="#selectionYearGroup" prefHeight="30.0" prefWidth="233.0" promptText="Promotion">
                            <GridPane.margin>
                               <Insets left="10.0" right="10.0" />
                            </GridPane.margin>
                         </ComboBox>
-                        <ComboBox fx:id="comboFiliere" layoutX="10.0" layoutY="38.0" onAction="#selectionFiliere" prefHeight="30.0" prefWidth="233.0" promptText="Filière" GridPane.columnIndex="1">
+                        <ComboBox fx:id="coursesCombo" layoutX="10.0" layoutY="38.0" onAction="#selectionCourses" prefHeight="30.0" prefWidth="233.0" promptText="Filière" GridPane.columnIndex="1">
                            <GridPane.margin>
                               <Insets left="10.0" right="10.0" />
                            </GridPane.margin>
                         </ComboBox>
-                        <ComboBox fx:id="comboEtudiant" layoutX="224.0" layoutY="38.0" onAction="#selectionEtudiant" prefHeight="30.0" prefWidth="233.0" promptText="Étudiant" GridPane.columnIndex="2">
+                        <ComboBox fx:id="studentCombo" layoutX="224.0" layoutY="38.0" onAction="#selectionStudent" prefHeight="30.0" prefWidth="233.0" promptText="Étudiant" GridPane.columnIndex="2">
                            <GridPane.margin>
                               <Insets left="10.0" right="10.0" />
                            </GridPane.margin>
@@ -71,7 +71,7 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <TableView fx:id="tableMoyennesEleve" prefHeight="200.0" prefWidth="200.0">
+                        <TableView fx:id="tableAverageGradeStudent" prefHeight="200.0" prefWidth="200.0">
                           <columns>
                             <TableColumn prefWidth="129.0" text="Module" />
                             <TableColumn minWidth="0.0" prefWidth="96.0" text="Moyenne" />
@@ -81,7 +81,7 @@
                               <Insets right="5.0" />
                            </GridPane.margin>
                         </TableView>
-                        <TableView fx:id="tableAbsencesEleve" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
+                        <TableView fx:id="tableNonattendanceStudent" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
                           <columns>
                             <TableColumn prefWidth="165.0" text="Date de l'absence" />
                             <TableColumn prefWidth="149.20001220703125" text="Justification" />
@@ -104,14 +104,14 @@
                       <RowConstraints maxHeight="53.0" minHeight="10.0" prefHeight="41.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Button fx:id="genererBulletinButton" mnemonicParsing="false" onAction="#genererBulletinBouton" prefHeight="50.0" prefWidth="132.0" text="Bulletin résumé" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-                        <Button fx:id="detailButton" mnemonicParsing="false" onAction="#selectionnerDetailButton" prefHeight="50.0" prefWidth="132.0" text="Bulletin détaillé" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                        <Button fx:id="generateReportButton" mnemonicParsing="false" onAction="#generateReportFunction" prefHeight="50.0" prefWidth="132.0" text="Bulletin résumé" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                        <Button fx:id="detailButton" mnemonicParsing="false" onAction="#DetailReportFunction" prefHeight="50.0" prefWidth="132.0" text="Bulletin détaillé" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
                         <Label text="Aide au jury:" GridPane.halignment="RIGHT" GridPane.valignment="CENTER">
                            <GridPane.margin>
                               <Insets right="15.0" />
                            </GridPane.margin>
                         </Label>
-                        <TextField fx:id="aideJuryField" editable="false" onAction="#recupererAideJury" GridPane.columnIndex="1">
+                        <TextField fx:id="helpToJuryField" editable="false" onAction="#getHelpToJury" GridPane.columnIndex="1">
                            <GridPane.margin>
                               <Insets left="10.0" right="10.0" />
                            </GridPane.margin>
